--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
   },
   "prettier": {},
   "dependencies": {
+    "@babel/core": "^7.12.10",
     "@frontity/core": "^1.9.1",
     "@frontity/html2react": "^1.5.0",
     "@frontity/mars-theme": "./packages/mars-theme",
     "@frontity/tiny-router": "^1.2.4",
     "@frontity/wp-source": "^1.10.0",
+    "babel-loader": "^8.2.2",
     "frontity": "^1.13.0"
   }
 }
