Adding new theme

--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@frontity/tiny-router": "^1.2.4",
     "@frontity/wp-source": "^1.10.0",
     "babel-loader": "^8.2.2",
-    "frontity": "^1.13.0"
+    "frontity": "^1.13.0",
+    "frontity-chakra-theme": "./packages/frontity-chakra-theme",
+    "react-spring": "^8.0.27"
   }
 }
