--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@babel/core": "^7.12.10",
     "@frontity/core": "^1.9.1",
+    "@frontity/google-analytics": "^1.3.1",
     "@frontity/html2react": "^1.5.0",
     "@frontity/mars-theme": "./packages/mars-theme",
     "@frontity/tiny-router": "^1.2.4",
