--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "build": "frontity build",
     "serve": "frontity serve"
   },
-  "prettier": {},
+  "prettier": {
+    "trailingComma": "es5",
+    "arrowParens": "always"
+  },
   "dependencies": {
     "@babel/core": "^7.12.10",
     "@frontity/core": "^1.9.1",
@@ -27,6 +30,8 @@
     "babel-loader": "^8.2.2",
     "frontity": "^1.13.0",
     "frontity-chakra-theme": "./packages/frontity-chakra-theme",
+    "prettier": "^2.2.1",
+    "react-icons": "^4.1.0",
     "react-spring": "^8.0.27"
   }
 }
