--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@frontity/components": "^1.7.1",
     "@frontity/core": "^1.10.1",
     "@frontity/google-analytics": "^1.4.1",
+    "@frontity/head-tags": "^1.1.1",
     "@frontity/hooks": "2.1.1",
     "@frontity/html2react": "^1.6.1",
     "@frontity/mars-theme": "*",
