--- a/packages/forgepress-theme/package.json
+++ b/packages/forgepress-theme/package.json
@@ -22,10 +22,10 @@
     "access": "public"
   },
   "dependencies": {
-    "framer-motion" : "3.3.0-beta.22",
+    "framer-motion" : "3.0.0",
     "@chakra-ui/react": "1.2.1",
-    "@emotion/react": "^11.1.4",
     "@emotion/styled": "^11.0.0",
+    "@emotion/react": "^11.1.4",
     "react-icons": "4.1.0"
   }
 }
